stubbing new features bug fixing, new awe bug

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="user-scalable=yes, maximum-scale=1.0, width=device-width, height=device-height" />
   <link href="css/bootstrap.css" rel="stylesheet">
 
+  <link rel="amphtml" href="https://www.example.com/url/to/amp/document.html">
+
   <link href="css/font-awesome.4.6.3.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Courier:400,300,100,100italic" rel="stylesheet">
   <link href="css/movie_styles.css" rel="stylesheet">
@@ -90,7 +92,7 @@
   <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyBLLzsTGrzr87x-nMPg8_N5bBY_Z-8ioFU ",
+    apiKey: "AIzaSyCnfDtTBNv_W66cxLfmitf0oGsJkH49OVg",
     authDomain: "myall-ada32.firebaseapp.com",
     databaseURL : "myall-ada32.firebaseio.com",
     storageBucket : "myall-ada32.appspot.com",
@@ -101,6 +103,16 @@
   var db = firebase.firestore();
   console.log(db);
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136858434-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-136858434-1');
+</script>
+
 <script src="js/angular-sticky.min.js"></script>
 <script src="app/ng-file-upload.min.js"></script>
 
